package maidsafe.passport.detail.protobuf;

message Fob {
  required int32 type = 1;
  required bytes identity = 2;
  required bytes encoded_private_key = 3;
  required bytes encoded_public_key = 4;
  required bytes validation_token = 5;
  optional bytes signed_by = 6;
}
